--- a/app/styles/navbar.css
+++ b/app/styles/navbar.css
@@ -344,7 +344,7 @@
       height: 65px;
       width: 100%;
       border-radius: 0;
-      bottom: 0;
+      bottom: -1px;
       top: auto;
       left: 0;
       right: 0;
