--- a/app/styles/createdSnap.css
+++ b/app/styles/createdSnap.css
@@ -360,7 +360,8 @@
     .prompt-text {
         font-size: 1rem;
         padding: 0.875rem 1.25rem;
-        margin: 0 0.5rem;
+        width: fit-content;
+        margin: 0 auto;
         line-height: 1.4;
     }
 
@@ -388,7 +389,8 @@
     .prompt-text {
         font-size: 0.95rem;
         padding: 0.75rem 1rem;
-        margin: 0 0.25rem;
+        width: fit-content;
+        margin: 0 auto;
     }
 }
 
